--- a/src/components/services/service.module.css
+++ b/src/components/services/service.module.css
@@ -1,10 +1,10 @@
 .appContainer {
-  width: 100%;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  width: calc(100% - 350px);
- 
+  flex-direction: column;
+  width: calc(100% + 100px);
+  /* estilizaçao pra deixar os filmes centralizados */
 }
 
 .title {
@@ -17,13 +17,13 @@
   padding-top: 50px;
   
 }
+
 .homeTitle h1 {
   font-size: 40px;
   padding-top: 50px;
- display: flex;
- text-align: left;
+  display: flex;
+  text-align: left;
 }
-
 
 .searchInput {
   width: 400px;
@@ -34,6 +34,8 @@
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
   background-color: #b4b4b4;
   transition: background-color 0.3s ease;
+  margin-bottom: 60px;
+
 }
 
 .movies {
@@ -43,18 +45,45 @@
 }
 
 .movieContainer {
+  width: 80%;
   display: grid;
-  grid-template-columns: repeat(3, 0.5fr);
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1.5fr));
   align-items: center;
   gap: 50px;
   padding: 0 2rem;
+
+}
+.movieContainer h3, h4 {
+  
+  margin-bottom: 8px;
+  font-weight: bold;
+  font-size: 18px;
+  opacity: 80%;
+  color: #fff;
+
+}
+.movieContainer p{
+
+  margin-bottom: 8px;
+  font-weight: bold;
+  font-size: 12px;
+  opacity: 80%;
+
+
 }
 
 .movieTitle {
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
+  
   font-size: 20px;
+}
+
+.starIcon {
+  width: 16px;
+  height: 16px;
 }
 
 .movieDate {
@@ -67,4 +96,45 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.detailsbtn {
+  font-family: "Inconsolata", monospace;
+  background-color: rgb(128, 209, 178);
+  color: rgb(40, 87, 99);
+  font-weight: 900;
+  padding: 10px;
+  margin-top: 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.favbutton button {
+  font-family: "Inconsolata", monospace;
+  color: rgb(117, 67, 32);
+  font-weight: 900;
+  padding: 10px;
+  margin-top: 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+
+}
+.content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: calc(100% - 100px);
+  padding: 60px;
+  
+  
+}
+.favoriteList {
+  width: 80%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1.5fr));
+    align-items: center;
+    gap: 50px;
+    padding: 0 2rem;
 }
