--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -8,12 +8,14 @@
 }
 
 .toggle {
+  
 width: 0;
 position: 20px;
 left: 20px;
 background: none;
 border: none;
 color: white;
+cursor: pointer;
 
 
 }
@@ -44,13 +46,16 @@ color: white;
   margin-top: -30px;
   padding: 30px;
 
-}  
-
-.ul li{
-  list-style: none;
-  padding: 20px 0px;
 }
 
+.ul{
+  list-style: none;
+  padding: 0;
+}
+
+.ul li{
+  padding: 20px 0px;
+}
 
 .navbarContainer{
   display: flex;
