--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -1,28 +1,35 @@
-.container{
+.container {
   height: 100vh;
   position: relative;
   background: linear-gradient(to right, #750c0c, #e28383);
   align-items: center;
   text-align: center;
- 
 }
 
 .toggle {
-width: 0;
-position: 20px;
-left: 20px;
-background: none;
-border: none;
-color: white;
 
+  position: absolute;
+  right: -18px;
+  top: 50%;
+  background: blue;
+  width: 36px;
+  height: 36px;
 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  border-radius: 50%;
+  padding: 5px;
+  border: none;
+  color: white;
 }
+
+
 .toggle i {
-  
   color: white;
   font-size: 2em;
   cursor: pointer;
-  padding: 125px;
 }
 
 .logo:hover {
@@ -36,57 +43,49 @@ color: white;
 .title {
   display: flex;
   justify-content: center;
-  font-size: 3.0rem;
+  font-size: 3rem;
   background: linear-gradient(to right, #750c0c, #e28383);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-weight: 1000;
   margin-top: -30px;
   padding: 30px;
+}
 
-}  
-
-.ul li{
+.ul li {
   list-style: none;
   padding: 20px 0px;
 }
 
-
-.navbarContainer{
+.navbarContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  
 }
 
-.navbarContainer li a{
+.navbarContainer li a {
   color: #ffffff;
   font-size: 20px;
-  
 }
 
-  .navbarContainer a:hover {
-    background-color: #575757;
-    border-radius: 4px;
-    height: 80px;
-    width: 100px;
+.navbarContainer a:hover {
+  background-color: #575757;
+  border-radius: 4px;
+  height: 80px;
+  width: 100px;
+  align-items: center;
+}
+
+.navbar img {
+  width: 80px;
+  height: auto;
+}
+
+@media (max-width: 768px) {
+  .navList {
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
   }
-
-  .navbar img {
-    width: 80px;
-    height: auto;
-  
-  }
-
-  
-  @media (max-width: 768px) {
-    .navList {
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-    }
-  }
-  
- 
+}
