--- a/src/components/services/service.module.css
+++ b/src/components/services/service.module.css
@@ -98,17 +98,23 @@
   align-items: center;
 }
 
+button {
+  width: 180px;
+}
+
 .detailsbtn {
   font-family: "Inconsolata", monospace;
-  background-color: rgb(128, 209, 178);
-  color: rgb(40, 87, 99);
+  background-color: rgb(153, 153, 153);
+  color: rgb(34, 32, 32);
   font-weight: 900;
   padding: 10px;
   margin-top: 10px;
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  font-size: 14px;
 }
+
 .favbutton button {
   font-family: "Inconsolata", monospace;
   color: rgb(117, 67, 32);
@@ -118,8 +124,10 @@
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  font-size: 12px;
 
 }
+
 .content {
   display: flex;
   justify-content: center;
@@ -128,8 +136,9 @@
   width: calc(100% - 100px);
   padding: 60px;
   
-  
 }
+
+
 .favoriteList {
   width: 80%;
     display: grid;
