--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -1,9 +1,9 @@
 .container {
-  height: 100vh;
+  height: 100%;
   position: relative;
-  background: linear-gradient(to right, #750c0c, #e28383);
   align-items: center;
   text-align: center;
+  position: fixed;
 }
 
 .toggle {
@@ -12,7 +12,7 @@
   position: absolute;
   right: -18px;
   top: 50%;
-  background: blue;
+  background: #750c0c;
   width: 36px;
   height: 36px;
 
@@ -24,6 +24,7 @@
   padding: 5px;
   border: none;
   color: white;
+  transition: transform 0.3s ease;
 }
 
 
@@ -32,6 +33,8 @@
   font-size: 2em;
   cursor: pointer;
 }
+
+
 
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
@@ -44,7 +47,7 @@
 .title {
   display: flex;
   justify-content: center;
-  font-size: 3rem;
+  font-size: 2.5rem;
   background: linear-gradient(to right, #750c0c, #e28383);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -55,7 +58,7 @@
 
 
 .ul li {
-
+padding: 20px 0;
 }
 
 .ul{
@@ -77,15 +80,14 @@
 
 .navbarContainer li a {
   color: #ffffff;
-  font-size: 20px;
+  font-size: 16px;
 }
 
-.navbarContainer a:hover {
-  background-color: #575757;
-  border-radius: 4px;
-  height: 80px;
-  width: 100px;
-  align-items: center;
+.ul li a:hover{
+  /* background-color: #575757;
+  border-radius: 4px; */
+  transform: scale(2.5);
+  transition: transform 0.3s ease;
 }
 
 .navbar img {
