--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -24,7 +24,6 @@
   padding: 5px;
   border: none;
   color: white;
-  transition: transform 0.3s ease;
 }
 
 
@@ -34,7 +33,9 @@
   cursor: pointer;
 }
 
-
+.logo{
+  padding-top: 20px;
+}
 
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
@@ -83,11 +84,14 @@ padding: 20px 0;
   font-size: 16px;
 }
 
+.ul i{
+padding: 8px;
+}
+
 .ul li a:hover{
-  /* background-color: #575757;
-  border-radius: 4px; */
-  transform: scale(2.5);
-  transition: transform 0.3s ease;
+  background-color: #575757;
+  border-radius: 4px;
+  
 }
 
 .navbar img {
