--- a/src/components/services/service.module.css
+++ b/src/components/services/service.module.css
@@ -16,7 +16,11 @@
   -webkit-text-fill-color: transparent;
   text-align: center;
   padding-top: 50px;
-  
+  /* height: 48px; */
+}
+
+.movieTitle{
+  height: 48px;
 }
 
 .homeTitle h1 {
@@ -58,8 +62,9 @@ padding-top: 50px;
   padding: 0 2rem;
   text-align: center;
   margin-top: 60px;
-
 }
+
+
 .movieContainer h3, h4 {
   
   margin-bottom: 8px;
@@ -87,8 +92,7 @@ padding-top: 50px;
   flex-direction: column;
   align-items: center;
   text-align: center;
-  
-  font-size: 20px;
+  height: 48px;
 }
 
 .starIcon {
@@ -173,15 +177,15 @@ button {
   gap: 12px;
   background-color: #750c0c;
   margin-top: 30px;
+  margin-bottom: 30px;
+  border-radius: 6px;
 }
 
 .detContainer{
   padding-top: 50px;
   text-align: center;
-    font-weight: bold;
-    font-size: 16px;
-    opacity: 80%;
-  
+  font-weight: bold;
+  font-size: 16px;
 }
 
 .detailsInfo h3{
